--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Sygma{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
@@ -14,6 +14,12 @@
         {% endblock %}
     </head>
     <body>
+        <nav>
+            <ul>
+                <li> Les services</li>
+                <li> Publier un service</li>
+            </ul>
+        </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
