--- a/templates/service/show.html.twig
+++ b/templates/service/show.html.twig
@@ -3,36 +3,30 @@
 {% block title %}Service{% endblock %}
 
 {% block body %}
-    <h1>Service</h1>
+    <div class="container">
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ service.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ service.title }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ service.description }}</td>
-            </tr>
-            <tr>
-                <th>Image</th>
-                <td>{{ service.image }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ service.price }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <h1>Service</h1>
+        <hr>
+        <p>{{ service.id }}</p>
+        <p>{{ service.title }}</p>
+        <p>{{ service.description }}</p>
+        <p>{{ service.image }}</p>
+        <p>{{ service.price }}</p>
+    
+        <br/>
+        <br/>
+        <hr>
+        <button><a href="{{ path('OrderInitialization', {'id': service.id}) }}" class="btn btn-primary">Commander</a></button>
 
-    <a href="{{ path('service_index') }}">back to list</a>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
 
-    <a href="{{ path('service_edit', {'id': service.id}) }}">edit</a>
+        <a href="{{ path('service_index') }}">back to list</a>
 
-    {{ include('service/_delete_form.html.twig') }}
+        <a href="{{ path('service_edit', {'id': service.id}) }}">edit</a>
+
+        {{ include('service/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
