--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Mon compte</a>    
+                    <a class="nav-link" href="{{ path('app_account') }}">Mon compte</a>    
                 </li>
 
                 <li class="nav-item">
