--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,26 +5,16 @@
 {% block body %}
 
 
-    <!-- Catégories nav -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-
-            {% for category in categories %}
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">{{ category.name }}</a>    
-                </li>
-
-            {% endfor %}
-      
-            </ul>
-        </div>
-    </nav>
+{{ include('home/_nav_category.html.twig') }}
 
 
 
 <div class="container">
+
+
+    <h2> Tout les services </h2>
+    <br/>
+    <br/>
 
     {% for service in services %}
 
@@ -42,7 +32,7 @@
     <br/> <br/> <br/>
     <h3> To do : </h3>
     
-    
+
     <ul>
     <li> Revoir l'inscription ( bug ligne 44 security controller ) </li>
     <li> Tester la connexion </li>
