[Service] add myService function in controller and add template

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -12,6 +12,14 @@
  
     <div class="container">
         <h1>Mon compte</h1>
+
+        <h2> Commandes passé </h2><br/>
+        <p> 
+        Mes commandes en cours : <br/>
+        </p>
+        <h2> Commandes passé </h2><br/>
+        <br/>
+
     </div>
 
 
