--- a/templates/account/_nav_account.html.twig
+++ b/templates/account/_nav_account.html.twig
@@ -18,7 +18,7 @@
         {% if is_granted('ROLE_USER') %}
 
         <li class="nav-item">
-            <a class="nav-link" href="#">Mes services</a>
+            <a class="nav-link" href="{{ path('my_service') }}">Mes services</a>
         </li>
 
         <li class="nav-item">
