--- a/templates/home/_nav_category.html.twig
+++ b/templates/home/_nav_category.html.twig
@@ -1,6 +1,6 @@
     <!-- Catégories nav -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarNav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sygma-navbar-sub">
+        <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav">
 
             {% for category in categories %}
