--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -19,7 +19,7 @@
                     <p class="info-account-user"> 0 cours distribué</p>
                     <hr>
                     <a class="" href="#">Vos statistiques</a><br/>
-                    <a class="" href="#">cashflow</a><br/>
+                    <a class="" href="#">Paramètre de paiement</a><br/>
                     <a class="" href="#">Gerer vos services</a><br/>
                     </p>
                 </div>
