--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,9 @@
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
+
+        <!-- AlpineJS CDN -->
+        <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     </head>
     <body>
 
