--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,5 +76,35 @@
         </nav>
 
         {% block body %}{% endblock %}
+
+        <footer>
+            <div class="column">
+                <ul>
+                    <li> link 1</li>
+                    <li> link 2</li>
+                    <li> link 3</li>
+                    <li> link 4</li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul>
+                    <li> link 1</li>
+                    <li> link 2</li>
+                    <li> link 3</li>
+                    <li> link 4</li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul>
+                    <li> link 1</li>
+                    <li> link 2</li>
+                    <li> link 3</li>
+                    <li> link 4</li>
+                </ul>
+            </div>
+        </footer>
+        <div class="last-footer">
+            <p>Copyright © 2021 - Sygma</p>
+        </div>
     </body>
 </html>
