--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,50 +9,26 @@
     <div class="sygma-container">
         <br/>
         <br/>
-        <h3> Trouvez un microcours</h3>
-        <h7>(existant pour la recherche : foo, bar, ou baz)<h7>
-
-        <div
-            x-data="{
-                search: '',
-                display: false,
-        
-                items: ['foo', 'bar', 'baz'],
-        
-                get filteredItems() {
-                    return this.items.filter(
-                        i => i.startsWith(this.search)
-                    )
-                }
-            }"
-        >
-            <input x-model="search" @click="{display = true}" placeholder="Trouvez votre micro-cours">
-        
-            <ul x-show="display">
-                <template x-for="item in filteredItems" :key="item">
-                    <li x-text="item"></li> <!-- TODO: les cartes de services correspondantes -->
-                </template>
-            </ul>
-        </div>
-
-        <br/>
-        <br/>
         <h3> Les cours particuliers </h3>
         <hr>
         <br/>
         <br/>
         <div class="services service-container">
             {% for service in services %}
-
+                <a href="{{ path('service_show', {'id': service.id}) }}"> 
                 <div class="card service" style="width: 18rem;">
                     <img src="service/img/{{ service.image }}" class="card-img-top" alt="{{ service.title }}">
                     <div class="card-body">
                         <h5 class="card-title">{{ service.title }}</h5>
                         <p class="card-text">{{ service.description }}</p>
-                        <h5>{{ service.price }} €</h5> 
-                        <a href="{{ path('service_show', {'id': service.id}) }}" class="btn btn-primary">Voir le service</a>
+                        <h6>{{ service.price }} €</h6> 
+                        <br/>
+                        <a href="{{ path('service_show', {'id': service.id}) }}" class="call-to-action" style="display:none;"> Voir le cours</a>
+                        <div class="call-to-action">Voir le cours</div>
                     </div>
                 </div>
+                
+                </a>
                 <br/><br/>
             
             {% endfor %}
