--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -20,7 +20,7 @@
                     <hr>
                     <a class="" href="#">Vos statistiques</a><br/>
                     <a class="" href="{{ url('account_payment') }}">Paramètre de paiement</a><br/>
-                    <a class="" href="#">Gerer vos services</a><br/>
+                    <a class="" href="{ { url('service_index') }}">Gerer vos services</a><br/>
                     </p>
                 </div>
                 <div class="account-service">
@@ -41,9 +41,8 @@
                 <div class="account-info">
                     <h5> {{app.user.username }} </h5><br/>
                     <p> 
-                    <a class="" href="#">Cashflow</a><br/>
-                    <a class="" href="#">Gestion des services</a><br/>
-                    <a class="" href="#">Statistiques</a>
+                    <a class="" href="{{ url('cashflow') }}">Cashflow & statistiques</a><br/>
+                    <a class="" href="{ { url('service_index') }}">Gestion des services</a><br/>
                     <hr>
                     </p>
                 </div>
