--- a/templates/service/new.html.twig
+++ b/templates/service/new.html.twig
@@ -8,7 +8,7 @@
 
         <h1>Créer un nouveau service</h1>
         {{ include('service/_form.html.twig') }}
-        <a href="{{ path('service_index') }}">Retour à la liste</a>
+        <a href="{{ path('my_service') }}">Retour à la liste</a>
         
     </div>
 {% endblock %}
