--- a/templates/service/show.html.twig
+++ b/templates/service/show.html.twig
@@ -23,7 +23,7 @@
         <br/>
         <br/>
 
-        <a href="{{ path('service_index') }}">retour à la liste</a>
+        <a href="{{ path('my_service') }}">retour à la liste</a>
 
         <a href="{{ path('service_edit', {'id': service.id}) }}">editer</a>
 
