--- a/templates/service/edit.html.twig
+++ b/templates/service/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('service/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('service_index') }}">back to list</a>
+    <a href="{{ path('my_service') }}">back to list</a>
 
     {{ include('service/_delete_form.html.twig') }}
 {% endblock %}
