[Fix bug] update public/service for not mixex with route in ServiceController

--- a/templates/service/show.html.twig
+++ b/templates/service/show.html.twig
@@ -10,7 +10,9 @@
         <p>{{ service.id }}</p>
         <p>{{ service.title }}</p>
         <p>{{ service.description }}</p>
-        <img src="service/img/{{ service.image }}" alt="{{ service.title }}">
+       
+        <img src="../../MentoringService/img/{{ service.image }}" alt="{{ service.title }}"
+        style="height:300px; width: 600px;">
         <p>{{ service.price }}</p>
     
         <br/>
