--- a/templates/service/category.html.twig
+++ b/templates/service/category.html.twig
@@ -17,7 +17,7 @@
         {% for service in serviceOfCategory %}
 
             <div class="card" style="width: 18rem;">
-            <img src="service/img/{{ service.image }}" class="card-img-top" alt="{{ service.title }}">
+            <img src="MentoringService/img/{{ service.image }}" class="card-img-top" alt="{{ service.title }}">
             <div class="card-body">
                 <h5 class="card-title">{{ service.title }}</h5>
                 <p class="card-text">{{ service.description }}</p>
