--- a/templates/service/index.html.twig
+++ b/templates/service/index.html.twig
@@ -31,11 +31,11 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">Pas de résultats</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('service_new') }}">Create new</a>
+    <a href="{{ path('service_new') }}">Créer un nouveau</a>
 {% endblock %}
